Updated site with latest changes

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,12 +1,12 @@
 <!-- components/footer.html -->
-<footer style="background: linear-gradient(90deg, #69aaaa, #195252);" class="text-white pt-4 pb-3 mt-auto">
+<footer style="background: linear-gradient(90deg, #69aa94, #135241);" class="text-white pt-4 pb-3 mt-auto">
 
 
   <div class="container">
     <div class="row text-center text-md-start">
       <!-- Column 1: Logo and About Text -->
        <div class="col-12 col-md-3 mb-4 mb-md-0">
-        <img src="assets/images/logo/logo.png" alt="Shrava's World Logo" style="height: 60px; width: auto; display: block;">
+        <img src="assets/images/logo/logo.png" alt="Shrava's World Logo" style="height: 60px; width: auto; display: block; background-color: white;">
         <p class="mt-2 small">
         Fresh & Organic – From Our Farms to Your Home: Ghee, Grains, Fruits & More!
         </p>
@@ -49,7 +49,7 @@
     <i class="fas fa-phone-alt me-2"></i> 8087833971
   </a>
   <a href="mailto:shrawasworld@gmail.com" class="text-white text-decoration-none d-block">
-    <i class="fas fa-envelope me-2"></i> shrawasworld@gmail.com
+    <i class="fas fa-envelope me-2"></i> shravasworld@gmail.com
   </a>
 </div>
 
