--- a/components/navbar.html
+++ b/components/navbar.html
@@ -28,7 +28,7 @@
 <!-- Custom Navbar Styles -->
 <style>
   .custom-navbar {
-    background: linear-gradient(90deg, #ccdcdc 0%, #088181 100%);
+    background: linear-gradient(90deg, #daeee2 0%, #daeee2 100%);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding-top: 8px;
     padding-bottom: 8px;
