--- a/components/highlights.html
+++ b/components/highlights.html
@@ -19,7 +19,7 @@
 </head>
 <body class="bg-light">
 
-  <section class="container py-0">
+  <section class="container py-0 mt-4">
     <div class="row justify-content-center text-center">
       <div class="col-12 mb-4">
         <h2 class="fw-bold">Why Choose Us</h2>
