Reuploaded complete website with latest updates

--- a/components/footer.html
+++ b/components/footer.html
@@ -37,7 +37,7 @@
 <div class="col-12 col-md-3">
   <h6 class="text-uppercase mb-3">Connect</h6>
   <a href="https://wa.me/9881093971" target="_blank" class="text-white text-decoration-none d-block mb-2">
-    <i class="fab fa-whatsapp me-2"></i> 9881093971
+    <i class="fab fa-whatsapp me-2"></i>+91 9881093971
   </a>
   <a href="https://www.instagram.com/machindrabhorade?igsh=aW50b2w3MWEydmdt" target="_blank" class="text-white text-decoration-none d-block mb-2">
     <i class="fab fa-instagram me-2"></i> Instagram
@@ -46,7 +46,7 @@
     <i class="fab fa-facebook me-2"></i> Facebook
   </a>
   <a href="tel:+8087833971" class="text-white text-decoration-none d-block mb-2">
-    <i class="fas fa-phone-alt me-2"></i> 8087833971
+    <i class="fas fa-phone-alt me-2"></i>+91 8087833971
   </a>
   <a href="mailto:shrawasworld@gmail.com" class="text-white text-decoration-none d-block">
     <i class="fas fa-envelope me-2"></i> shravasworld@gmail.com
