--- a/components/footer.html
+++ b/components/footer.html
@@ -45,12 +45,16 @@
   <a href="https://www.facebook.com/share/16nQQAh2Gt/" target="_blank" class="text-white text-decoration-none d-block mb-2">
     <i class="fab fa-facebook me-2"></i> Facebook
   </a>
+  <a href="https://www.linkedin.com/in/machindra-bhorade-908204390?lipi" target="_blank" class="text-white text-decoration-none d-block mb-2">
+    <i class="fab fa-linkedin me-2"></i> LinkedIn
+  </a>
   <a href="tel:+8087833971" class="text-white text-decoration-none d-block mb-2">
     <i class="fas fa-phone-alt me-2"></i>+91 8087833971
   </a>
   <a href="mailto:shrawasworld@gmail.com" class="text-white text-decoration-none d-block">
     <i class="fas fa-envelope me-2"></i> shravasworld@gmail.com
   </a>
+
 </div>
 
     </div>
