--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,5 @@
 <!-- components/footer.html -->
-<footer style="background: linear-gradient(90deg, #69aa94, #135241);" class="text-white pt-4 pb-3 mt-auto">
+<footer style="background: linear-gradient(90deg, #69aa77, #0a362a);" class="text-white pt-4 pb-3 mt-auto">
 
 
   <div class="container">
