--- a/components/testimonials.html
+++ b/components/testimonials.html
@@ -19,7 +19,7 @@
 }
 
 .testimonials-section h2 {
-  color: #1e8167 !important;
+  color: #165F36 !important;
 }
 
 .testimonials-section .testimonial-card {
