updated last one

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,12 +1,13 @@
 <!-- components/footer.html -->
-<footer style="background: linear-gradient(90deg, #69aa77, #0a362a);" class="text-white pt-4 pb-3 mt-auto">
+<footer style="background: linear-gradient(90deg, #0a362a, #0a362a);" class="text-white pt-4 pb-3 mt-auto">
 
 
   <div class="container">
     <div class="row text-center text-md-start">
       <!-- Column 1: Logo and About Text -->
        <div class="col-12 col-md-3 mb-4 mb-md-0">
-        <img src="assets/images/logo/logo.png" alt="Shrava's World Logo" style="height: 60px; width: auto; display: block; background-color: white;">
+        
+        <img src="assets/images/logo/logo.png" alt="Shrava's World Logo" style="height: 60px; width: auto; display: block; background-color: rgb(200, 233, 213);">
         <p class="mt-2 small">
         Fresh & Organic – From Our Farms to Your Home: Ghee, Grains, Fruits & More!
         </p>
@@ -19,6 +20,7 @@
           <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
           <li><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
           <li><a href="products.html" class="text-white text-decoration-none">Products</a></li>
+          <li><a href="/certificates.html" class="text-white text-decoration-none">Certificates</a></li>
           <li><a href="contact.html" class="text-white text-decoration-none">Contact Us</a></li>
         </ul>
       </div>
