--- a/components/navbar.html
+++ b/components/navbar.html
@@ -18,6 +18,7 @@
         <li class="nav-item"><a class="nav-link text-dark fw-bold" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link text-dark fw-bold" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link text-dark fw-bold" href="products.html">Products</a></li>
+        <li class="nav-item"><a class="nav-link text-dark fw-bold" href="/certificates.html">Certificates</a></li>
         <li class="nav-item"><a class="nav-link text-dark fw-bold" href="contact.html">Contact</a></li>
       </ul>
     </div>
