--- a/components/footer.html
+++ b/components/footer.html
@@ -20,7 +20,7 @@
           <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
           <li><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
           <li><a href="products.html" class="text-white text-decoration-none">Products</a></li>
-          <li><a href="/certificates.html" class="text-white text-decoration-none">Certificates</a></li>
+          <li><a href="certificates.html" class="text-white text-decoration-none">Certificates</a></li>
           <li><a href="contact.html" class="text-white text-decoration-none">Contact Us</a></li>
         </ul>
       </div>
