updated last one

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -2,7 +2,11 @@
   <div class="container">
     <!-- Brand Logo -->
     <a class="navbar-brand" href="index.html">
-     <img src="assets/images/logo/logo.png" alt="Shrava's World Logo" style="height:80px; width:120px; max-width:180px;">
+     <img src="assets/images/logo/logo.png" alt="Shrava's World Logo"
+     width="120"
+     height="80"
+     loading="lazy"
+     style="max-width:180px;">
 
     </a>
 
