updated last one

--- a/components/footer.html
+++ b/components/footer.html
@@ -54,7 +54,7 @@
     <i class="fas fa-phone-alt me-2"></i>+91 8087833971
   </a>
   <a href="mailto:shrawasworld@gmail.com" class="text-white text-decoration-none d-block">
-    <i class="fas fa-envelope me-2"></i> shravasworld@gmail.com
+    <i class="fas fa-envelope me-2"></i> enquiry@shravasworld.com
   </a>
 
 </div>
